# display-commander

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitignore.swp  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  KNOWN_BUGS.md  KNOWN_ISSUES.md  LICENSE  README.md  SUPPORT.md  THIRD_PARTY_NOTICES.txt  bd32_core.ps1  bd_core.ps1  build_display_commander.ps1  start.ps1  start_service64.ps1  stop_service64.ps1
src/addons/display_commander/: CMakeLists.txt  addon.cpp  addon.hpp  background_window.cpp  continuous_monitoring.cpp  dbghelp_loader.cpp  dbghelp_loader.hpp  display_cache.cpp  display_cache.hpp  display_initial_state.cpp  display_restore.cpp  display_restore.hpp  dll_boot_logging.cpp  dll_boot_logging.hpp  dll_process_attach.cpp  dll_process_attach.hpp  exit_handler.cpp  exit_handler.hpp  globals.cpp  globals.hpp  gpu_completion_monitoring.cpp  init_without_hwnd.cpp  init_without_hwnd.hpp  main_entry.cpp  main_exe.cpp  performance_types.hpp  process_exit_hooks.cpp  process_exit_hooks.hpp  reshade_addon_handlers.cpp  reshade_addon_handlers.hpp  reshade_event_registration.cpp  reshade_module_detection.cpp  reshade_module_detection.hpp  resolution_helpers.cpp  resolution_helpers.hpp  rundll_injection.cpp  rundll_injection_helpers.hpp  swapchain_events.cpp  swapchain_events.hpp  swapchain_events_power_saving.cpp  (+1 more)
src/addons/display_commander/adhd_multi_monitor/: adhd_multi_monitor.cpp  adhd_multi_monitor.hpp  adhd_simple_api.cpp  adhd_simple_api.hpp
src/addons/display_commander/audio/: audio_channel_volume.cpp  audio_device_policy.hpp  audio_management.cpp  audio_management.hpp
src/addons/display_commander/autoclick/: autoclick_action.cpp  autoclick_action.hpp  autoclick_manager.cpp  autoclick_manager.hpp
src/addons/display_commander/config/: audio_draw_main_tab_inline_lite_stub.cpp  chords_file.cpp  chords_file.hpp  default_overrides.cpp  default_overrides.hpp  default_settings_file.cpp  default_settings_file.hpp  display_commander_config.cpp  display_commander_config.hpp  global_settings_file.cpp  global_settings_file.hpp  hotkeys_file.cpp  hotkeys_file.hpp  override_reshade_settings_stub.cpp  toml_line_parser.hpp
src/addons/display_commander/dcomposition/: dcomposition_refresh_rate_monitor.cpp  dcomposition_refresh_rate_monitor.hpp
src/addons/display_commander/display/: display_cache.cpp  display_cache.hpp  display_initial_state.cpp  display_initial_state.hpp  display_restore.cpp  dpi_management.cpp  dpi_management.hpp  hdr_control.cpp  hdr_control.hpp  query_display.cpp  query_display.hpp  sdr_white_level.cpp  sdr_white_level.hpp
src/addons/display_commander/dlss/: dlss_indicator_manager.cpp  dlss_indicator_manager.hpp
src/addons/display_commander/dualsense/: dualsense_hid_wrapper.cpp  dualsense_hid_wrapper.hpp
src/addons/display_commander/dxgi/: custom_fps_limiter.cpp  dxgi_management.cpp  vram_info.cpp  vram_info.hpp
src/addons/display_commander/hdr_upgrade/: hdr_upgrade.cpp  hdr_upgrade.hpp
src/addons/display_commander/hid/: hid_enumeration.hpp
src/addons/display_commander/hooks/: api_hooks.cpp  api_hooks.hpp  dbghelp_hooks.cpp  dbghelp_hooks.hpp  dinput_hooks.cpp  dinput_hooks.hpp  display_settings_hooks.cpp  display_settings_hooks.hpp  dpi_hooks.cpp  dpi_hooks.hpp  dualsense_hooks.cpp  dxgi_factory_wrapper.cpp  dxgi_factory_wrapper.hpp  game_input_hooks.cpp  hid_additional_hooks.cpp  hid_additional_hooks.hpp  hid_hooks_install.cpp  hid_statistics.cpp  hid_statistics.hpp  hid_suppression_hooks.cpp  hid_suppression_hooks.hpp  hook_call_stats.hpp  hook_suppression_manager.cpp  hook_suppression_manager.hpp  input_activity_stats.cpp  input_activity_stats.hpp  loadlibrary_hooks.cpp  loadlibrary_hooks.hpp  module_hook_entry.hpp  mutually_exclusive_keys.cpp  mutually_exclusive_keys.hpp  ngx_hooks.cpp  ngx_hooks.hpp  nvapi_hooks.cpp  nvapi_hooks.hpp  nvlowlatencyvk_hooks.cpp  nvlowlatencyvk_hooks.hpp  opengl_hooks.cpp  opengl_hooks.hpp  pclstats_etw_hooks.cpp  (+23 more)
src/addons/display_commander/input_remapping/: input_remapping.cpp  input_remapping.hpp
src/addons/display_commander/latency/: gpu_completion_monitoring.cpp  gpu_completion_monitoring.hpp  latency_manager.cpp  latency_manager.hpp  pclstats_etw.cpp  pclstats_etw.hpp  pclstats_logger.cpp  pclstats_logger.hpp  reflex_provider.cpp  reflex_provider.hpp
src/addons/display_commander/latent_sync/: latent_sync_limiter.cpp  latent_sync_limiter.hpp  latent_sync_manager.cpp  latent_sync_manager.hpp  refresh_rate_monitor.cpp  refresh_rate_monitor.hpp  refresh_rate_monitor_integration.cpp  refresh_rate_monitor_integration.hpp  vblank_monitor.cpp  vblank_monitor.hpp  vblank_monitor_integration.cpp
src/addons/display_commander/modules/: module_registry.cpp  module_registry.hpp
src/addons/display_commander/nvapi/: fake_nvapi_manager.cpp  gpu_dynamic_utilization.hpp  gpu_temperature.hpp  nvapi_actual_refresh_rate_monitor.cpp  nvapi_actual_refresh_rate_monitor.hpp  nvapi_fullscreen_prevention.cpp  nvapi_init.cpp  nvapi_init.hpp  nvapi_loader.cpp  nvapi_loader.hpp  nvidia_profile_search.cpp  nvidia_profile_search.hpp  nvpi_reference.cpp  nvpi_reference.hpp  reflex_manager.cpp  reflex_manager.hpp  run_nvapi_setdword_as_admin.hpp  vram_info.cpp  vram_info.hpp  vrr_status.cpp  vrr_status.hpp
src/addons/display_commander/presentmon/: presentmon_manager.cpp  presentmon_manager.hpp
src/addons/display_commander/proxy_dll/: bcrypt.hpp  bcrypt_proxy.cpp  bcrypt_proxy.hpp  d3d11_proxy.cpp  d3d12_proxy.cpp  d3d9_proxy.cpp  d3d9_proxy_init.hpp  ddraw_proxy.cpp  ddraw_proxy_init.hpp  dinput8_proxy.cpp  dinput8_proxy_init.hpp  dxgi_proxy.cpp  dxgi_proxy_init.hpp  exports.def  exports_addon_only.def  hid_proxy.cpp  opengl32_proxy.cpp  opengl32_proxy_gl.h  opengl32_proxy_init.hpp  proxy_detection.hpp  reshade_loader.cpp  reshade_loader.hpp  version.rc.in  version_proxy.cpp  vulkan-1_proxy.cpp  vulkan_proxy_abi.hpp  winhttp_proxy.cpp  winhttp_proxy.hpp  winmm_proxy.cpp  winmm_proxy.hpp  (+1 more)
tools/: CMakeLists.txt  fetch_external_src.ps1  find_unused_api.py
tools/game_commander/: injector_service.cpp
(+455 files in other folders)
